--- a/.env
+++ b/.env
@@ -1,2 +1,3 @@
 VITE_AUTH0_DOMAIN=dev-ydfwgxx6p3n1djvt.us.auth0.com
 VITE_AUTH0_CLIENT_ID=iR2VKt4r4x567KbZ434B699xcExJ9H29
+VITE_BACKEND_URL=http://localhost:5000
